--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-closure-compiler": "0.0.21",
-    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.8.0",
-    "grunt-tsc": "^1.0.6",
-    "grunt-wrap": "^0.3.0"
+    "grunt-tsc": "^1.0.6"
   }
 }
