--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "browser-typescript",
+  "description": "Compile TypeScript files in browser",
+  "version": "0.0.0",
+  "homepage": "https://github.com/rodzewich/browser-typescript",
+  "author": {
+    "name": "Oleg Rodzewich",
+    "url": "https://github.com/rodzewich",
+    "email": "rodzewich.oleg@gmail.com"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-closure-compiler": "0.0.21",
